# guardrail

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN_V2.md  README.md  SUBMISSION.md  deny.toml  docker-compose.yml  justfile  plan.md  render.yaml  skills-lock.json
apps/guardrail-agent/: Cargo.toml
apps/guardrail-agent/src/: args.rs  bootstrap.rs  main.rs  shutdown.rs  wiring.rs
apps/guardrail-api/: Cargo.toml
apps/guardrail-api/src/: agent_card.rs  agent_services.rs  assets.rs  audit_manifest.rs  backtest.rs  bnb_sdk.rs  briefing.rs  budget.rs  cmc_capabilities.rs  commerce.rs  compete.rs  compile.rs  correlation.rs  costs.rs  drift.rs  ensemble.rs  ensemble_live.rs  equity_ta.rs  exit_triggers.rs  experiments.rs  exposure.rs  fees.rs  funding.rs  heartbeat.rs  history.rs  indicators.rs  job_simulator.rs  journal.rs  liquidity.rs  main.rs  mandates.rs  optimize.rs  orderbook.rs  playbook.rs  pnl.rs  portfolio_risk.rs  presets.rs  prizes.rs  proof_verify.rs  quotes.rs  (+20 more)
apps/guardrail-cli/: Cargo.toml
apps/guardrail-cli/src/: main.rs  util.rs
apps/guardrail-doctor/: Cargo.toml
apps/guardrail-doctor/src/: check.rs  main.rs  report.rs
apps/guardrail-exporter/: Cargo.toml
apps/guardrail-exporter/src/: config.rs  counts.rs  main.rs  metrics.rs  report.rs
apps/guardrail-monitor/: Cargo.toml
apps/guardrail-monitor/src/: alerts.rs  checks.rs  main.rs  notify.rs  report.rs  watchdog.rs
apps/guardrail-sim/: Cargo.toml
apps/guardrail-sim/src/: cli.rs  main.rs  output.rs  preset.rs  sweep.rs
clients/langchain/: README.md  pyproject.toml
clients/langchain/examples/: agent_demo.py
clients/langchain/guardrail_langchain/: __init__.py  tools.py
clients/python/: README.md  pyproject.toml
clients/python/examples/: quant_tools.py  quickstart.py  verify_proof.py
clients/python/guardrail_client/: __init__.py  __main__.py  cli.py  proof.py
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: daily_trade_loop.rs  data_loop.rs  error.rs  lib.rs  reconciliation_loop.rs  report_loop.rs  runtime.rs  scheduler.rs  shutdown.rs  state_machine.rs  trading_loop.rs
crates/agent-runtime/tests/: e2e_runtime.rs
crates/backtester/: Cargo.toml
crates/backtester/src/: benchmark.rs  engine.rs  gas.rs  historical_data.rs  lib.rs  metrics.rs  report.rs  simulator.rs  slippage.rs  synthetic.rs  walk_forward.rs
crates/backtester/tests/: backtest.rs
crates/cmc-client/: Cargo.toml
crates/cmc-client/src/: client.rs  endpoints.rs  error.rs  lib.rs  mcp.rs  mock.rs  models.rs  rate_limit.rs  rest.rs  retry.rs  x402.rs
crates/cmc-client/tests/: mock_test.rs
crates/common/: Cargo.toml
crates/common/src/: asset.rs  chain.rs  config.rs  constants.rs  decimal.rs  error.rs  ids.rs  lib.rs  money.rs  order.rs  time.rs
crates/common/tests/: asset_test.rs  chain_test.rs  decimal_test.rs  ids_test.rs  money_test.rs  order_test.rs  time_test.rs
crates/event-store/: Cargo.toml
crates/event-store/src/: db.rs  event.rs  export.rs  lib.rs  migrations.rs  projections.rs  queries.rs  repository.rs  store.rs
crates/event-store/tests/: sqlite_repository.rs
crates/execution/: Cargo.toml
crates/execution/src/: approved_order.rs  error.rs  execution_plan.rs  lib.rs  order_intent.rs  post_trade.rs  pre_trade.rs  reconciliation.rs  retry.rs  router.rs
crates/execution/tests/: pipeline.rs
crates/fee-model/: Cargo.toml  README.md
crates/fee-model/src/: fee.rs  gas.rs  lib.rs  slippage.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: cache.rs  candle.rs  lib.rs  liquidity.rs  market_regime_inputs.rs  security.rs  snapshot.rs  universe.rs  validator.rs
crates/market-data/tests/: market_data_tests.rs  validator_test.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: book.rs  lib.rs  order.rs  trade.rs
crates/pnl-attribution/: Cargo.toml
crates/pnl-attribution/src/: lib.rs
crates/policy-compiler/: Cargo.toml
crates/policy-compiler/src/: compiler.rs  defaults.rs  lib.rs  parser.rs  policy_hash.rs  schema.rs  validator.rs
crates/policy-compiler/tests/: compile.rs
crates/risk-engine/: Cargo.toml
crates/risk-engine/src/: approval.rs  audit.rs  kill_switch.rs  lib.rs  policy.rs  sizing.rs  throttle.rs
crates/risk-engine/tests/: risk_gate.rs
crates/strategy-engine/: Cargo.toml
crates/strategy-engine/src/: allocator.rs  alpha_score.rs  daily_trade.rs  exits.rs  explanation.rs  lib.rs  rebalance.rs  regime.rs  strategy_config.rs  target_portfolio.rs
crates/strategy-engine/tests/: daily_trade_test.rs  exits_test.rs  explanation_test.rs  strategy_test.rs
crates/strategy-ensemble/: Cargo.toml
crates/strategy-ensemble/src/: blend.rs  error.rs  lib.rs  weights.rs
crates/ta-signals/: Cargo.toml
crates/ta-signals/src/: adx.rs  atr.rs  bollinger.rs  candle.rs  ema.rs  lib.rs  macd.rs  obv.rs  rsi.rs  sma.rs  stochastic.rs  vwap.rs
crates/twak-client/: Cargo.toml
crates/twak-client/src/: approvals.rs  cli.rs  competition.rs  error.rs  identity.rs  lib.rs  mcp.rs  mock.rs  parse.rs  portfolio.rs  quote.rs  rest.rs  risk.rs  swap.rs  tx_history.rs  wallet.rs  x402.rs
crates/twak-client/tests/: mock_test.rs
integrations/bnbagent-sdk/: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
integrations/bnbagent-sdk/bnbagent/: _version.py  constants.py  exceptions.py  main.py
integrations/bnbagent-sdk/examples/: README.md  security_e2e.py  x402_buyer_demo.py
integrations/bnbagent-sdk/tests/: README.md  __init__.py  test_contract_mixin.py  test_erc8183_client.py  test_erc8183_config.py  test_erc8183_job_ops.py  test_erc8183_routes_poll.py  test_erc8183_routes_startup.py  test_erc8183_schema.py  test_ipfs_storage.py  test_models.py  test_module_system.py  test_multicall.py  test_negotiation.py  test_nonce_manager.py  test_paymaster.py  test_rate_limit.py  test_sdk.py  test_signing_policy.py  test_wallet.py  (+3 more)
python-lab/montecarlo/: README.md  pyproject.toml
python-lab/optimizer/: README.md  pyproject.toml
(+803 files in other folders)
