[package]
name = "guardrail-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
policy-compiler.workspace = true
backtester.workspace = true
market-data.workspace = true
cmc-client.workspace = true
strategy-engine.workspace = true
risk-engine.workspace = true
ta-signals = { path = "../../crates/ta-signals" }
fee-model = { path = "../../crates/fee-model" }
position-sizer = { path = "../../crates/position-sizer" }
orderbook = { path = "../../crates/orderbook" }
pnl-attribution = { path = "../../crates/pnl-attribution" }
correlation = { path = "../../crates/correlation" }
bnb-agent.workspace = true
twak-client.workspace = true
indicators = { path = "../../crates/indicators" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
tokio.workspace = true

