[package]
name = "guardrail-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "guardrail-doctor"
path = "src/main.rs"

[dependencies]
common.workspace = true
market-data.workspace = true
risk-engine.workspace = true
policy-compiler.workspace = true
anyhow.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
