[package]
name = "guardrail-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
observability.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
reqwest.workspace = true
notifier = { path = "../../crates/notifier" }
