[package]
name = "guardrail-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "guardrail-sim"
path = "src/main.rs"

[dependencies]
common.workspace = true
market-data.workspace = true
strategy-engine.workspace = true
risk-engine.workspace = true
backtester.workspace = true
clap.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
