[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
cmc-client.workspace = true
market-data.workspace = true
feature-engine.workspace = true
strategy-engine.workspace = true
strategy-ensemble = { path = "../strategy-ensemble" }
portfolio-optimizer = { path = "../portfolio-optimizer" }
risk-engine.workspace = true
portfolio.workspace = true
twak-client.workspace = true
execution.workspace = true
event-store.workspace = true
llm-interface.workspace = true
observability.workspace = true
bnb-agent.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

