[package]
name = "cmc-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio.workspace = true
