[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
uuid.workspace = true
config.workspace = true
