[package]
name = "event-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
uuid.workspace = true

