[package]
name = "notifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
