[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "In-memory limit order book with a price-time-priority matching engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }

[features]
default = []
