[package]
name = "policy-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
risk-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true
rust_decimal.workspace = true

