[package]
name = "strategy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
market-data.workspace = true
feature-engine.workspace = true
portfolio-optimizer = { path = "../portfolio-optimizer" }
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
tracing.workspace = true
