[package]
name = "strategy-ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
strategy-engine.workspace = true
risk-engine = { path = "../risk-engine" }
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
