[package]
name = "twak-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
risk-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true

