[project]
name = "guardrail-montecarlo"
version = "0.1.0"
description = "Monte Carlo simulation of Guardrail strategy outcomes (bootstrap + GBM)."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
guardrail-montecarlo = "montecarlo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
